Add mandatory fields for all pages

--- a/Final Project/views/faculty.html
+++ b/Final Project/views/faculty.html
@@ -36,7 +36,7 @@
 				<div class="col-md-4">
 				<div class="form-group">
 					<label for="name">Name</label>
-					<input type="text" class="form-control" id="name" name="name">
+					<input type="text" class="form-control" id="name" name="name" required>
 				</div>
 				</div>
 				<div class="col-md-4"></div>
@@ -46,7 +46,7 @@
 				<div class="col-md-4">
 				<div class="form-group">
 					<label for="email">Email</label>
-					<input type="email" class="form-control" id="email" name="email"></div></div>
+					<input type="email" class="form-control" id="email" name="email" required></div></div>
 				<div class="col-md-4"></div>
 			 </div>
 			 <div class="row">
@@ -54,7 +54,7 @@
 				<div class="col-md-4">
 				<div class="form-group">
 					<label for="contact">Contact Number</label>
-					<input type="text" class="form-control" id="contact" name="contact"></div></div>
+					<input type="text" class="form-control" id="contact" name="contact" required></div></div>
                     <div class="col-md-4"></div>
                 </div>    
 			<div class="row">
@@ -62,7 +62,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="topic">Program</label>
-						<input type="topic" class="form-control" id="topic" name="Topic"></div></div>
+						<input type="topic" class="form-control" id="topic" name="Topic" required></div></div>
 				<div class="col-md-4"></div>
 			</div>
 			<div class="row">
@@ -70,7 +70,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="presenter">Presenter</label>
-						<input type="cheque" class="form-control" id="presenter" name="presenter"></div></div>
+						<input type="cheque" class="form-control" id="presenter" name="presenter" required></div></div>
 				<div class="col-md-4"></div>
             </div>
             <div class="row">
@@ -78,7 +78,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="coupon">Coupon</label>
-						<input type="cheque" class="form-control" id="coupon" name="coupon"></div></div>
+						<input type="cheque" class="form-control" id="coupon" name="coupon" required></div></div>
 				<div class="col-md-4"></div>
 			</div>
 			<div class="row"><div class="col-md-4"></div><div class="col-md-4">
