--- a/Final Project/views/presenter.html
+++ b/Final Project/views/presenter.html
@@ -19,7 +19,7 @@
 			<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
-						<h2>Attendee Registration Form</h2>
+						<h2>Presenter Registration Form</h2>
 					</div>
 					<div class="col-md-2"></div>
                 </div>
@@ -36,7 +36,7 @@
 				<div class="col-md-4">
 				<div class="form-group">
 					<label for="name">Name</label>
-					<input type="text" class="form-control" id="name" name="name">
+					<input type="text" class="form-control" id="name" name="name" required>
 				</div>
 				</div>
 				<div class="col-md-4"></div>
@@ -46,7 +46,7 @@
 				<div class="col-md-4">
 				<div class="form-group">
 					<label for="email">Email</label>
-					<input type="email" class="form-control" id="email" name="email"></div></div>
+					<input type="email" class="form-control" id="email" name="email" required></div></div>
 				<div class="col-md-4"></div>
 			 </div>
 			 <div class="row">
@@ -54,7 +54,7 @@
 				<div class="col-md-4">
 				<div class="form-group">
 					<label for="contact">Contact Number</label>
-					<input type="text" class="form-control" id="contact" name="contact"></div></div>
+					<input type="text" class="form-control" id="contact" name="contact" required></div></div>
 					<div class="col-md-4"></div>
 			</div>
 			<div class="row">
@@ -62,7 +62,7 @@
 				<div class="col-md-4">
 				<div class="form-group">
 					<label for="school">School</label>
-					<input type="school" class="form-control" id="school" name="school"></div></div>
+					<input type="school" class="form-control" id="school" name="school" required></div></div>
 					<div class="col-md-4"></div>
 			</div>
 			<div class="row">
@@ -70,7 +70,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="level">Level of Education</label>
-						<input type="" class="form-control" id="level" name="level"></div></div>
+						<input type="" class="form-control" id="level" name="level" required></div></div>
 				<div class="col-md-4"></div>
             </div>
             <div class="row">
@@ -78,7 +78,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="topic">Topic to present</label>
-						<input type="topic" class="form-control" id="topic" name="Topic"></div></div>
+						<input type="topic" class="form-control" id="topic" name="Topic" required></div></div>
 				<div class="col-md-4"></div>
 			</div>
             <div class="row">
@@ -86,7 +86,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
                     <form action="/action_page.php">
-                <input type="file" name="pic" accept="image/*">
+                <input type="file" name="pic" accept="image/*" required>
               </form>
               <div class="col-md-4"></div>
             </div>
