--- a/Final Project/views/faculty.html
+++ b/Final Project/views/faculty.html
@@ -99,10 +99,12 @@
 						<input type="cheque" class="form-control" id="coupon" name="coupon" required></div></div>
 				<div class="col-md-4"></div>
 			</div>
-			<div class="row"><div class="col-md-4"></div><div class="col-md-4">
-				<button type="submit" class="btn" value="Submit">Submit</button></div></div>
+			<div class="row">
 				<div class="col-md-4"></div>
-		<!--</form>-->
+				<div class="col-md-4">
+				<button type="submit" class="btn btn-primary">Submit</button></div>
+				<div class="col-md-4"></div>
+		</form>
 	</div>
 </body>
 </html>
