--- a/Final Project/views/presenter.html
+++ b/Final Project/views/presenter.html
@@ -105,13 +105,14 @@
 					<div class="form-group">
                     <form action="/action_page.php">
                 <input type="file" name="pic" accept="image/*" required>
-              </form>
               <div class="col-md-4"></div>
             </div>
-			<div class="row"><div class="col-md-4"></div><div class="col-md-4">
-				<button type="submit" class="btn" value="Submit">Submit</button></div></div>
+			<div class="row">
 				<div class="col-md-4"></div>
-		<!--</form>-->
+				<div class="col-md-4">
+				<button type="submit" class="btn btn-primary">Submit</button></div>
+				<div class="col-md-4"></div>
+		</form>
 	</div>
 </body>
 </html>
