--- a/Final Project/views/Paymentthroughcheck.html
+++ b/Final Project/views/Paymentthroughcheck.html
@@ -7,9 +7,9 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <link type="text/css"
       rel="stylesheet"
-	  href="Chilakala_DarshanReddy.css"/>
+	  href="Anusha Chowdary Kollu.css"/>
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- <title> Sirisha </title>
+ <title> .EDU Conference </title>
     </head>
 <body>
 	<div class ="container">
@@ -19,25 +19,24 @@
 			<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
-						<h4>CHECK OUT FORM</h4>
+						<h2>Payment through Check</h2>
 					</div>
 					<div class="col-md-2"></div>
                 </div>
                 <div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
-						
+						<p>Please fill the below details</p>
 					</div>
 					<div class="col-md-2"></div>
 				</div>
-	<form method="POST" action="/" role="form">
+	<!--<form method="POST" action="views" role="form">-->
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
 				<div class="form-group">
-					<label for="Program Details">Program Name: </label>
-                    <label for="E1">Early Bird Registration</label>
-					
+					<label for="name">Name</label>
+					<input type="text" class="form-control" id="name" name="name">
 				</div>
 				</div>
 				<div class="col-md-4"></div>
@@ -46,26 +45,35 @@
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
 				<div class="form-group">
-					<label for="email">Price:</label>
-					<label for="email">$21.5</label>
+					<label for="check number">Check Number</label>
+					<input type="text" class="form-control" id="check number" name="check number"></div></div>
 				<div class="col-md-4"></div>
-             </div>
-             
-             <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4">
-                    <div class="form-group">
-                <label>Quantity</label>
-                <input type="text" />
-                <div class="col-md-4"></div>
-            
-            </div>
-			 
-		
+			 </div>
+			 <div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+				<div class="form-group">
+					<label for="name of the bank">Name of the bank</label>
+					<input type="text" class="form-control" id="name of the bank" name="name of the bank"></div></div>
+					<div class="col-md-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+				<div class="form-group">
+					<label for="Date">Date</label>
+					<input type="Date" class="form-control" id="Date" name="Date"></div></div>
+					<div class="col-md-4"></div>
+			</div>
 			<div class="row"><div class="col-md-4"></div><div class="col-md-4">
-				<button type="submit" class="btn" value="Submit">Checkout</button></div></div>
+				<button type="submit" class="btn" value="Submit">Submit</button></div></div>
 				<div class="col-md-4"></div>
-		</form>
+		<!--</form>-->
 	</div>
 </body>
 </html>
+
+
+
+	 
+  
