--- a/Final Project/views/Paymentthroughcheck.html
+++ b/Final Project/views/Paymentthroughcheck.html
@@ -66,10 +66,18 @@
 					<div class="col-md-4"></div>
 			</div>
 			<div class="row"><div class="col-md-4"></div><div class="col-md-4">
-				<button type="submit" class="btn" value="Submit">Submit</button></div></div>
+				<button type="submit" class="btn" value="Submit">Submit</button>&nbsp;&nbsp;&nbsp;
+				<button onclick="goBack()">Go Back</button></div></div>
 				<div class="col-md-4"></div>
 		<!--</form>-->
 	</div>
+	
+	
+	<script>
+	function goBack() {
+		window.history.back();
+	}
+	</script>
 </body>
 </html>
 
