Add sending mail to faculty feature and coupon code page

--- a/Final Project/views/faculty.html
+++ b/Final Project/views/faculty.html
@@ -48,7 +48,7 @@
 					</div>
 					<div class="col-md-2"></div>
 				</div>
-	<!--<form method="POST" action="views" role="form">-->
+	<form method="POST" action="mail" >
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
@@ -75,30 +75,6 @@
 					<input type="text" class="form-control" id="contact" name="contact" required></div></div>
                     <div class="col-md-4"></div>
                 </div>    
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4">
-					<div class="form-group">
-						<label for="topic">Program</label>
-						<input type="topic" class="form-control" id="topic" name="Topic" required></div></div>
-				<div class="col-md-4"></div>
-			</div>
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4">
-					<div class="form-group">
-						<label for="presenter">Presenter</label>
-						<input type="cheque" class="form-control" id="presenter" name="presenter" required></div></div>
-				<div class="col-md-4"></div>
-            </div>
-            <div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4">
-					<div class="form-group">
-						<label for="coupon">Coupon</label>
-						<input type="cheque" class="form-control" id="coupon" name="coupon" required></div></div>
-				<div class="col-md-4"></div>
-			</div>
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
