--- a/Final Project/views/attendee.html
+++ b/Final Project/views/attendee.html
@@ -19,15 +19,15 @@
 				<div class="page-header">
 					<div class="row">
 						<div class="col-md-2">
-							<a class="active" href="file:///C:/Users/S530714/Desktop/gdp-group03/Final%20Project/views/home.html">Home</a></div>
+							<a class="active" href="home">Home</a></div>
 						<div class="col-md-2">
-							<a class="active" href="file:///C:/Users/S530714/Desktop/gdp-group03/Final%20Project/views/attendee.html">Attendee</a></div>
+							<a class="active" href="attendee">Attendee</a></div>
 						<div class="col-md-2">
-							<a class="active" href="file:///C:/Users/S530714/Desktop/gdp-group03/Final%20Project/views/presenter.html">Presenter</a></div>
+							<a class="active" href="presenter">Presenter</a></div>
 						 <div class="col-md-2">
-							 <a class="active" href="file:///C:/Users/S530714/Desktop/gdp-group03/Final%20Project/views/faculty.html">Faculty</a></div>
+							 <a class="active" href="faculty">Faculty</a></div>
 						 <div class="col-md-2">
-								 <a class="active" href="file:///C:/Users/S530714/Desktop/gdp-group03/Final%20Project/views/vendor.html">Vendor</a></div>
+								 <a class="active" href="vendor">Vendor</a></div>
 					 </div>
 					</div>
 				</div>
@@ -51,7 +51,7 @@
 					</div>
 					<div class="col-md-2"></div>
 				</div>
-	<form action="/attendee/cart" method="POST">
+	<form action="/cart" method="GET">
 			<div class="row"> 
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
