--- a/Final Project/views/faculty.html
+++ b/Final Project/views/faculty.html
@@ -78,11 +78,16 @@
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
-				<button type="submit" class="btn btn-primary">Submit</button></div>
+				<button type="submit" class="btn btn-primary" id="coupon1" >Submit</button></div>	
 				<div class="col-md-4"></div>
 		</form>
 	</div>
 </body>
+<script type="text/javascript">
+	function genrandom1(){
+		var r=Math.floor(Math.random()*10000)+5;
+		}
+	</script>
 </html>
 
 
