Add Presentercart page, styling to the navbar

--- a/Final Project/views/Presentercart.html
+++ b/Final Project/views/Presentercart.html
@@ -3,7 +3,7 @@
 <head>
         <link href="Style" rel="stylesheet" type="text/css"/>	
    <title> .EDU Conference </title>
-</head>
+    </head>
 <body>
 
 <h2>Items in your cart</h2>
@@ -15,7 +15,7 @@
     <h2>Item Name</h2>
     <p>First Name</p>
     <p>Last Name</p>
-    <p>919 Number</p>
+    <p>Presentation Topic</p>
    
   </div>
   <div class="column1">
@@ -51,18 +51,16 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="goBack()">Go Back</button>
     </div>
     </div>
-
     <script>
-        function goBack() {
-        window.history.back();
-        }
-        </script>   
-    
+            function goBack() {
+            window.history.back();
+            }
+            </script>   
         <script>
                 function myFunction() {
                  document.getElementById("demo").innerHTML = "Your shopping cart has been updated successfully";
                   var x = document.getElementById("val").value;
-                  document.getElementById("demo1").innerHTML = x*21.5;
+                  document.getElementById("demo1").innerHTML = x*10;
                 }
         </script>
 </body>
