--- a/Final Project/views/vendor.html
+++ b/Final Project/views/vendor.html
@@ -5,9 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-<link type="text/css"
-      rel="stylesheet"
-	  href="Chilakala_DarshanReddy.css"/>
+<link href="Style" rel="stylesheet" type="text/css"/>
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <title>.EDU Conference</title>
     </head>
@@ -16,7 +14,7 @@
 		<br>
 		<div class = "container-fluid">
 			<div class ="container">
-					<!-- <div class="page-header"> -->
+					<div class="header">
 						<div class="row">
 							<div class="col-md-2">
 								<a class="active" href="home">Home</a></div>
