--- a/Final Project/views/home.html
+++ b/Final Project/views/home.html
@@ -4,20 +4,20 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-		<link type="text/css"
-      	rel="stylesheet"
-	 	 href="Chilakala_DarshanReddy.css"/>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">		
+		<link href="Style" rel="stylesheet" type="text/css"/>			
 	 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  		<title> .EDU Conference </title>
 </head>
 <body>
-		<div class ="container">
-			<div class="page-header">
+		
+		<!-- <div class ="container"> -->
+			<div class="header">
 				<div class="row">
-						<div class="col-md-2">
+						<!-- <div class="col-md-2">
 							<h1>Registration</h1>
-						</div>
+						</div> -->
+						<div class="header-right">
 						<div class="col-md-2">
 							<a class="active" href="home">Home</a></div>
 						<div class="col-md-2">
@@ -28,9 +28,11 @@
 							 <a class="active" href="faculty">Faculty</a></div>
 						 <div class="col-md-2">
 								 <a class="active" href="vendor">Vendor</a></div>
+								</div>
 					 </div>
-				</div>
+				<!-- </div> -->
 		
+								  
 	</body>
 </html>
 	 
