Add brickpayment page and modify couponcode

--- a/Final Project/views/couponcode.html
+++ b/Final Project/views/couponcode.html
@@ -37,8 +37,13 @@ function verification(Request, Response){
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">					
-				<button type="submit"  style="margin-left: 170px" class="btn btn-primary" onclick="verification()">Submit</button></div>
+				<button type="submit"  class="btn btn-primary" onclick="verification()">.edu conference</button></div>
 				<div class="col-md-4"></div>
+				<div class="row">
+					<div class="col-md-4"></div>
+					<div class="col-md-4">					
+					<button type="submit"  Style="margin-right: 10px" class="btn"><a href="./brickpayment.html">Brick&Click</a></button></div>
+					<div class="col-md-4"></div>
 
 
 </body>
