--- a/Final Project/views/presenter.html
+++ b/Final Project/views/presenter.html
@@ -22,6 +22,8 @@
 								<a class="active" href="attendee">Attendee</a></div>
 							<div class="col-md-2">
 								<a class="active" href="presenter">Presenter</a></div>
+								<div class="col-md-2">
+									<a class="active" href="Graduatestudent">Graduate Student</a></div>
 							 <div class="col-md-2">
 								 <a class="active" href="faculty">Faculty</a></div>
 							 <div class="col-md-2">
