--- a/Final Project/views/Graduatestudent.html
+++ b/Final Project/views/Graduatestudent.html
@@ -7,7 +7,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <link href="Style" rel="stylesheet" type="text/css"/>
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- <title> .EDU Conference </title>
+ <title>.EDU Conference</title>
     </head>
 <body>
 		<br>
@@ -37,7 +37,7 @@
 			<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8">
-						<h2>Faculty Registration Form</h2>
+						<h2>Graduate Student Registration Form</h2>
 					</div>
 					<div class="col-md-2"></div>
                 </div>
@@ -48,7 +48,7 @@
 					</div>
 					<div class="col-md-2"></div>
 				</div>
-	<form method="POST" action="mail" >
+	<form method="GET" action="/cart" role="form">-->
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
@@ -78,16 +78,27 @@
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
-				<button type="submit" class="btn btn-primary" id="coupon1" >Submit</button></div>	
+					<div class="form-group">
+						<label for="topic">Program</label>
+						<input type="topic" class="form-control" id="topic" name="Topic" required></div></div>
+				<div class="col-md-4"></div>
+			</div>
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label for="presenter">Presenter</label>
+						<input type="cheque" class="form-control" id="presenter" name="presenter" required></div></div>
+				<div class="col-md-4"></div>
+            </div>
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+				<button type="submit" class="btn btn-primary">Submit</button></div>
 				<div class="col-md-4"></div>
 		</form>
 	</div>
 </body>
-<script type="text/javascript">
-	function genrandom1(){
-		var r=Math.floor(Math.random()*10000)+5;
-		}
-	</script>
 </html>
 
 
