--- a/Final Project/views/attendee.html
+++ b/Final Project/views/attendee.html
@@ -12,8 +12,8 @@
 <body>
 	<br>
 	<br>
-	<div class = "container-fluid">
-		<div class ="container">
+	<!-- <div class = "container-fluid"> -->
+		<!-- <div class ="container"> -->
 				<div class="header">
 					<div class="row">
 						<div class="col-md-2">
@@ -22,12 +22,14 @@
 							<a class="active" href="attendee">Attendee</a></div>
 						<div class="col-md-2">
 							<a class="active" href="presenter">Presenter</a></div>
+							<div class="col-md-2">
+								<a class="active" href="Graduatestudent">Graduate Student</a></div>
 						 <div class="col-md-2">
 							 <a class="active" href="faculty">Faculty</a></div>
 						 <div class="col-md-2">
 								 <a class="active" href="vendor">Vendor</a></div>
 					 </div>
-					</div>
+					<!-- </div> -->
 				</div>
 				<br>
 				<br>
