Add edupay page and connect payment ways

--- a/Final Project/views/couponcode.html
+++ b/Final Project/views/couponcode.html
@@ -37,7 +37,7 @@ function verification(Request, Response){
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">					
-				<button type="submit"  class="btn btn-primary" onclick="verification()">.edu conference</button></div>
+				<button type="submit"  class="btn btn-primary" class="btn"><a href="./edupay.html">edu conference</a></button></div>
 				<div class="col-md-4"></div>
 				<div class="row">
 					<div class="col-md-4"></div>
