Add changes to pages according to client need

--- a/Final Project/views/home.html
+++ b/Final Project/views/home.html
@@ -25,7 +25,7 @@
 						<div class="col-md-2">
 							<a class="active" href="presenter">Presenter</a></div>
 						 <div class="col-md-2">
-							 <a class="active" href="faculty">Faculty</a></div>
+							 <a class="active" href="Northwest Faculty">Faculty</a></div>
 						 <div class="col-md-2">
 								 <a class="active" href="vendor">Vendor</a></div>
 								</div>
