--- a/Final Project/views/faculty.html
+++ b/Final Project/views/faculty.html
@@ -12,8 +12,8 @@
 <body>
 		<br>
 		<br>
-		<div class = "container-fluid">
-			<div class ="container">
+		<!-- <div class = "container-fluid"> -->
+			<!-- <div class ="container"> -->
 					<div class="header">
 						<div class="row">
 							<div class="col-md-2">
@@ -29,7 +29,7 @@
 							 <div class="col-md-2">
 									 <a class="active" href="vendor">Vendor</a></div>
 						 </div>
-						</div>
+						<!-- </div> -->
 					</div>
 					<br>
 					<br>
