make change in attendee page

--- a/Final Project/views/attendee.html
+++ b/Final Project/views/attendee.html
@@ -84,7 +84,7 @@
 					<input type="school" class="form-control" id="school" name="school" required></div></div>
 					<div class="col-md-4"></div>
 			</div>
-			<div class="row">
+			<!-- <div class="row">
 					<div class="col-md-4"></div>
 					<div class="col-md-4">
 					<div class="form-group">
@@ -98,7 +98,7 @@
 			</form> 
 		</div>
 	</div>
-</div>
+</div> -->
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
