--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -1,4 +1,7 @@
 <% include home %>
+<head>
+	<link href="/css/home.css" type="text/css" rel="stylesheet" />
+	</head>
 	<div class="container">
 			<div class="row">
 					<div class="col-md-2"></div>
