--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,19 +13,19 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">.EDU Conference</a>
+      <a class="navbar-brand active" href="/">.EDU Conference</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Registration <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="attendee">Attendee</a></li>
-          <li><a href="presenter">Presenter</a></li>
-          <li><a href="Graduatestudent">Graduate Student</a></li>
-          <li><a href="faculty">Faculty</a></li>
-          <li><a href="vendor">Vendor</a></li>
+          <li><a class="active" href="attendee">Attendee</a></li>
+          <li><a class="active" href="presenter">Presenter</a></li>
+          <li><a class="active" href="Graduatestudent">Graduate Student</a></li>
+          <li><a class="active" href="faculty">Faculty</a></li>
+          <li><a class="active" href="vendor">Vendor</a></li>
         </ul>
       </li>
-      <li><a href="#">Contact</a></li>
+      <li><a class="active" href="contact">Contact</a></li>
     </ul>
   </div>
 </nav>
