Add food and restriction field

--- a/views/Graduatestudent.ejs
+++ b/views/Graduatestudent.ejs
@@ -59,11 +59,28 @@
 						<label for="presenter">Presenter</label>
 						<input type="cheque" class="form-control" id="presenter" name="presenter" required></div></div>
 				<div class="col-md-4"></div>
-            </div>
+			</div>
+			<div class="row">
+					<div class="col-md-4"></div>
+					<div class="col-md-4">
+						<div class="form-group">
+							<label for="Food">Food</label><br>
+							<input type="radio" name="veg" value="Veg" checked> Vegetarian<br>
+							<input type="radio" name="nonveg" value="Non-Veg"> Non-Vegetarian<br></div></div>
+			<div class="col-md-4"></div>
+			</div>
+			<div class="row">
+					<div class="col-md-4"></div>
+					<div class="col-md-4">
+						<div class="form-group">
+							<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
+							<input type="restrict" class="form-control" id="restrict" name="restrict" required></div></div>
+			<div class="col-md-4"></div>
+			</div>
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
-				<button type="submit" class="btn btn-primary">Submit</button></div>
+				<button type="submit" class="btn btn-primary">Add to cart</button></div>
 				<div class="col-md-4"></div>
 		</form>
 	</div>
