--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -43,11 +43,28 @@
 					<label for="contact">Contact Number</label>
 					<input type="text" class="form-control" id="contact" name="contact" required></div></div>
                     <div class="col-md-4"></div>
-                </div>    
+				</div>    
+				<div class="row">
+						<div class="col-md-4"></div>
+						<div class="col-md-4">
+							<div class="form-group">
+								<label for="Food">Food</label><br>
+								<input type="radio" name="veg" value="Veg" checked> Vegetarian<br>
+								<input type="radio" name="nonveg" value="Non-Veg"> Non-Vegetarian<br></div></div>
+				<div class="col-md-4"></div>
+				</div>
+				<div class="row">
+						<div class="col-md-4"></div>
+						<div class="col-md-4">
+							<div class="form-group">
+								<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
+								<input type="restrict" class="form-control" id="restrict" name="restrict" required></div></div>
+				<div class="col-md-4"></div>
+				</div>
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
-				<button type="submit" class="btn btn-primary" id="coupon1" >Submit</button></div>	
+				<button type="submit" class="btn btn-primary" id="coupon1" >Add to cart</button></div>	
 				<div class="col-md-4"></div>
 		</form>
 	</div>
