--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -72,14 +72,32 @@
 		<div class="col-md-4"></div>
 		<div class="col-md-4">
 			<div class="form-group">
+					<label for="attach">If document is not ready, Please email to @nwmissouri once registered.</label>
 			<form action="/action_page.php">
-		<input type="file" name="pic" accept="image/*" required>
+		<input type="file" name="pic" accept="image/*"></div></div>
 	  <div class="col-md-4"></div>
 	</div>
 	<div class="row">
 		<div class="col-md-4"></div>
 		<div class="col-md-4">
-		<button type="submit" class="btn btn-primary">Submit</button></div>
+			<div class="form-group">
+				<label for="Food">Food</label><br>
+				<input type="radio" name="veg" value="Veg" checked> Vegetarian<br>
+				<input type="radio" name="nonveg" value="Non-Veg"> Non-Vegetarian<br></div></div>
+<div class="col-md-4"></div>
+</div>
+<div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-4">
+			<div class="form-group">
+				<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
+				<input type="restrict" class="form-control" id="restrict" name="restrict" required></div></div>
+<div class="col-md-4"></div>
+</div>
+	<div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-4">
+		<button type="submit" class="btn btn-primary">Add to cart</button></div>
 		<div class="col-md-4"></div>
 </form>
 </div>  
