Create database connection to presenter

--- a/views/attendee.ejs
+++ b/views/attendee.ejs
@@ -81,7 +81,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
-						<input type="restrict" class="form-control" id="restrict" name="restrict" required></div></div>
+						<input type="restrict" class="form-control" id="restrict" name="restrict"></div></div>
 		<div class="col-md-4"></div>
 		</div>
 			<div class="row">
