--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -17,7 +17,7 @@
 			</div>
 			<div class="col-md-2"></div>
 		</div>
-<form method="GET" action="\Presentercart" role="form">
+<form method="POST" action="/presenter">
 	<div class="row">
 		<div class="col-md-4"></div>
 		<div class="col-md-4">
@@ -47,14 +47,6 @@
 	<div class="row">
 		<div class="col-md-4"></div>
 		<div class="col-md-4">
-		<div class="form-group">
-			<label for="school">School</label>
-			<input type="school" class="form-control" id="school" name="school" required></div></div>
-			<div class="col-md-4"></div>
-	</div>
-	<div class="row">
-		<div class="col-md-4"></div>
-		<div class="col-md-4">
 			<div class="form-group">
 				<label for="level">Level of Education</label>
 				<input type="" class="form-control" id="level" name="level" required></div></div>
@@ -65,7 +57,7 @@
 		<div class="col-md-4">
 			<div class="form-group">
 				<label for="topic">Topic to present</label>
-				<input type="topic" class="form-control" id="topic" name="Topic" required></div></div>
+				<input type="topic" class="form-control" id="topic" name="topic" required></div></div>
 		<div class="col-md-4"></div>
 	</div>
 	<div class="row">
@@ -73,31 +65,31 @@
 		<div class="col-md-4">
 			<div class="form-group">
 					<label for="attach">If document is not ready, Please email to @nwmissouri once registered.</label>
-			<form action="/action_page.php">
-		<input type="file" name="pic" accept="image/*"></div></div>
+			<form action="index.php" method="post" enctype="multipart/form-data">
+				<input type="file" name="attach"></div></div>
 	  <div class="col-md-4"></div>
 	</div>
 	<div class="row">
-		<div class="col-md-4"></div>
-		<div class="col-md-4">
-			<div class="form-group">
-				<label for="Food">Food</label><br>
-				<input type="radio" name="veg" value="Veg" checked> Vegetarian<br>
-				<input type="radio" name="nonveg" value="Non-Veg"> Non-Vegetarian<br></div></div>
-<div class="col-md-4"></div>
-</div>
-<div class="row">
-		<div class="col-md-4"></div>
-		<div class="col-md-4">
-			<div class="form-group">
-				<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
-				<input type="restrict" class="form-control" id="restrict" name="restrict" required></div></div>
-<div class="col-md-4"></div>
+			<div class="col-md-4"></div>
+			<div class="col-md-4">
+				<div class="form-group">
+					<label for="Food">Food(Specify Veg or Non-Veg)</label><br>
+					<input type="food" class="form-control" id="food" name="food"></div></div>
+	<div class="col-md-4"></div>
+	</div>
+	<div class="row">
+			<div class="col-md-4"></div>
+			<div class="col-md-4">
+				<div class="form-group">
+					<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
+					<input type="restrict" class="form-control" id="restrict" name="restrict"></div></div>
+	<div class="col-md-4"></div>
+	</div>
 </div>
 	<div class="row">
 		<div class="col-md-4"></div>
 		<div class="col-md-4">
-		<button type="submit" class="btn btn-primary">Add to cart</button></div>
+		<button type="submit" class="btn btn-primary">Submit</button></div>
 		<div class="col-md-4"></div>
 </form>
 </div>  
