Add database connection for graduate student

--- a/views/Graduatestudent.ejs
+++ b/views/Graduatestudent.ejs
@@ -17,7 +17,7 @@
 					</div>
 					<div class="col-md-2"></div>
 				</div>
-	<form method="GET" action="/cart" role="form">
+	<form method="POST" action="/Graduatestudent" role="form">
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
