--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -17,7 +17,7 @@
 					</div>
 					<div class="col-md-2"></div>
 				</div>
-	<form method="POST" action="mail" >
+	<form action="/faculty" method="POST"  >
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
@@ -45,22 +45,20 @@
                     <div class="col-md-4"></div>
 				</div>    
 				<div class="row">
-						<div class="col-md-4"></div>
-						<div class="col-md-4">
-							<div class="form-group">
-								<label for="Food">Food</label><br>
-								<input type="radio" name="veg" value="Veg" checked> Vegetarian<br>
-								<input type="radio" name="nonveg" value="Non-Veg"> Non-Vegetarian<br></div></div>
-				<div class="col-md-4"></div>
-				</div>
-				<div class="row">
-						<div class="col-md-4"></div>
-						<div class="col-md-4">
-							<div class="form-group">
-								<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
-								<input type="restrict" class="form-control" id="restrict" name="restrict" required></div></div>
-				<div class="col-md-4"></div>
-				</div>
+					<div class="col-md-4"></div>
+					<div class="col-md-4">
+						<div class="form-group">
+							<label for="Food">Food(Specify Veg or Non-Veg)</label><br>
+							<input type="food" class="form-control" id="food" name="food"></div></div>
+			<div class="col-md-4"></div>
+			</div>
+			<div class="row">
+					<div class="col-md-4"></div>
+					<div class="col-md-4">
+						<div class="form-group">
+							<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
+							<input type="restrict" class="form-control" id="restrict" name="restrict"></div></div>
+			<div class="col-md-4"></div>
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
