Add check payment functionality

--- a/views/Graduatestudent.ejs
+++ b/views/Graduatestudent.ejs
@@ -17,7 +17,7 @@
 					</div>
 					<div class="col-md-2"></div>
 				</div>
-	<form method="POST" action="/Graduatestudent" role="form">
+	<form  action="/Graduatestudent" method="POST">
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
@@ -49,7 +49,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="topic">Program</label>
-						<input type="topic" class="form-control" id="topic" name="Topic" required></div></div>
+						<input type="topic" class="form-control" id="topic" name="topic" required></div></div>
 				<div class="col-md-4"></div>
 			</div>
 			<div class="row">
@@ -60,21 +60,9 @@
 						<input type="cheque" class="form-control" id="presenter" name="presenter" required></div></div>
 				<div class="col-md-4"></div>
 			</div>
-			<div class="row">
-					<div class="col-md-4"></div>
-					<div class="col-md-4">
-						<div class="form-group">
-							<label for="Food">Food</label><br>
-							<input type="radio" name="veg" value="Veg" checked> Vegetarian<br>
-							<input type="radio" name="nonveg" value="Non-Veg"> Non-Vegetarian<br></div></div>
-			<div class="col-md-4"></div>
-			</div>
-			<div class="row">
-					<div class="col-md-4"></div>
-					<div class="col-md-4">
-						<div class="form-group">
-							<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
-							<input type="restrict" class="form-control" id="restrict" name="restrict" required></div></div>
+			
+
+			
 			<div class="col-md-4"></div>
 			</div>
 			<div class="row">
