Create database for vendor

--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -22,17 +22,17 @@
 				<div class="col-md-4">
 				<div class="form-group">
 				<label for="Vendor">Select Category According to the conference </label>	
-		 <form action="/action_page.php">
+		 
 			<select name="Vendor"Style="width:370px">
 				<option value="Green">Green</option>
 				<option value="White">White</option>
 				<option value="Gray">Gray</option>
 			</select>
-		</form> 
+		
 	</div>
 </div>
 </div>
-<form method="GET" action="/cart" role="form">
+<form method="POST" action="/vendor">
 
 	<div class="row">
 	<div class="col-md-4"></div>
