Add food and restrictions to graduate student

--- a/views/Graduatestudent.ejs
+++ b/views/Graduatestudent.ejs
@@ -61,8 +61,21 @@
 				<div class="col-md-4"></div>
 			</div>
 			
-
-			
+<div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="Food">Food(Specify Veg or Non-Veg)</label><br>
+                        <input type="food" class="form-control" id="food" name="food"></div></div>
+        <div class="col-md-4"></div>
+        </div>
+        <div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
+                        <input type="restrict" class="form-control" id="restrict" name="restrict"></div></div>
+	
 			<div class="col-md-4"></div>
 			</div>
 			<div class="row">
