--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <link href="Style" rel="stylesheet" type="text/css"/>	
+        <link href="/Assets/css/styles.css" rel="stylesheet" type="text/css"/>	
    <title> .EDU Conference </title>
 </head>
 <body>
@@ -13,10 +13,8 @@
 <div class="row">
   <div class="column">
     <h2>Item Name</h2>
-    <p>First Name</p>
-    <p>Last Name</p>
-    <p>919 Number</p>
-   
+   <p> Name : <%= list %></p>
+   <p> Email : <%= list1 %></p>
   </div>
   <div class="column1">
     <h2>Quantity</h2>
