Add routing and solve the issues in CardPayment

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -44,8 +44,8 @@
     <div class="btn-row">
         <form action="/paymentthroughcheck" method="GET">
         <a class="btn btn-default btn-block" href="Paymentthroughcheck" role="button">Pay Through Check</a></form> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <form action="/PayThroughCards" method="GET">
-        <a class="btn btn-default btn-block" href="payThroughCards" role="button">Pay Through Cards</a></form><br>
+        <form action="/CardPayment" method="GET">
+        <a class="btn btn-default btn-block" href="CardPayment" role="button">Pay Through Cards</a></form><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="goBack()">Go Back</button>
     </div>
     </div>
