Retrieve values from database for presenter

--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -32,7 +32,7 @@
 	</div>
 </div>
 </div>
-<form method="POST" action="/vendor">
+<form method="POST" action="/vendor" role="form">
 
 	<div class="row">
 	<div class="col-md-4"></div>
