--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -58,7 +58,9 @@
 						<div class="form-group">
 							<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
 							<input type="restrict" class="form-control" id="restrict" name="restrict"></div></div>
+						
 			<div class="col-md-4"></div>
+		</div>
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
