--- a/views/attendee.ejs
+++ b/views/attendee.ejs
@@ -2,6 +2,7 @@
 <head>
 	<link href="/css/home.css" type="text/css" rel="stylesheet" />
 	</head>
+	
 <div class="container">
 			<div class="row">
 					<div class="col-md-2"></div>
@@ -17,7 +18,7 @@
 					</div>
 					<div class="col-md-2"></div>
 				</div>
-	<form action="/attendee" method="POST">
+	<form action="/attendee" method="POST" id="myForm">
 			<div class="row"> 
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
@@ -90,3 +91,4 @@
 			<button type="submit" class="btn btn-primary">Submit</button></div>
 			<div class="col-md-4"></div>
 		</form>
+		
