Integrate admin login functionality

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link href="/css/home.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
@@ -26,6 +27,7 @@
         </ul>
       </li>
       <li><a class="active" href="contact">Contact</a></li>
+      <li><a class="active" class="right" href="admin">Admin</a></li>
     </ul>
   </div>
 </nav>
