Add navbar to admin page

--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -4,3 +4,10 @@ body{
     .right{
         float:right;
     }
+    .footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;   
+        color: Black;
+       }
