--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -2,27 +2,25 @@
 <html>
 <head>
 	<title>.Edu Conference</title>
-	<link rel="stylesheet" href="/css/bootstrap.css" />
-	<link rel="stylesheet" href="/css/style.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="/css/home.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-	<div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            {{#if user}}
-              <li role="presentation"><a href="/">Dashboard</a></li>
-              <li role="presentation"><a href="/users/logout">Logout</a></li>
-            {{else}}
-              <li role="presentation"><a href="/users/login">Login</a></li>
-              <li role="presentation"><a href="/users/register">Register</a></li>
-            {{/if}}
-          </ul>
-        </nav>
-        <h3 class="text-muted">.Edu conference</h3>
+  <div class="container-fluid">
+        <div class="header clearfix">
+        <nav class="navbar navbar-inverse">
+  
+    <div class="navbar-header">
+      <a class="navbar-brand active" href="/">.EDU Conference</a>
+      <a class="navbar-brand active" href="attendee">Attendee</a>
+      <a class="navbar-brand active" href="presenter">presenter</a>   
+      <a class="navbar-brand active" href="vendor">vendor</a>
       </div>
+      </nav>
 
-
+       
       <div class="row">
         <div class="col-lg-12">
           {{#if success_msg}}
@@ -42,6 +40,7 @@
 
         
       </div>
+        </div>
 
       <footer class="footer">
         <p>.Edu Conference</p>
