--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,5 +8,7 @@
     <label>Password</label>
     <input type="password" class="form-control" name="password" placeholder="Password">
   </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <button type="submit" class="btn btn-default">Submit</button> 
+  <input type=button onClick="location.href='/users/register'" value='SignUp'>
+
 </form>
