--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,4 +1,7 @@
-<h2 class="page-header">Register</h2>
+<div class="col-md-3"></div>
+<div class="col-md-8">
+  <h2>Register</h2>
+  </div>
 {{#if user}}
         <div class="alert alert-danger">Username has taken already try new</div> 
 {{/if}}
@@ -11,25 +14,28 @@
       {{/each}}
 {{/if}}
 <form method="post" action="/users/register">
+<div class="col-md-4"></div>
+<div class="col-md-4">
    <div class="form-group">
     <label>Name</label>
-    <input type="text" class="form-control" placeholder="Name" name="name">
+    <input type="text" class="form-control" placeholder="Name" name="name" required>
   </div>
   <div class="form-group">
     <label>Username</label>
-    <input type="text" class="form-control" placeholder="Username" name="username">
+    <input type="text" class="form-control" placeholder="Username" name="username" required>
   </div>
    <div class="form-group">
     <label>Email</label>
-    <input type="email" class="form-control" placeholder="Email" name="email">
+    <input type="email" class="form-control" placeholder="Email" name="email" required>
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password">
+    <input type="password" class="form-control" placeholder="Password" name="password" required>
   </div>
   <div class="form-group">
     <label>Confirm Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password2">
+    <input type="password" class="form-control" placeholder="Password" name="password2" required>
   </div>
   <button type="submit" class="btn btn-default">Submit</button>
+</div>
 </form>
