create vendor and add logout in admin

--- a/views/adminhomepage.ejs
+++ b/views/adminhomepage.ejs
@@ -15,8 +15,11 @@
     <div class="navbar-header">
       <a class="navbar-brand active" href="attendee">Attendee</a>
       <a class="navbar-brand active" href="presenter">presenter</a>   
-      <a class="navbar-brand active" href="vendor">vendor</a>
-      </div>
+      <a class="navbar-brand active" href="adminvendor">vendor</a>
+    </div>
+      <li class="pull-right">
+          <a class="navbar-brand active" href="/users/logout">Logout</a>
+      </li>
       </nav>  
         </div>
   </div>
