--- a/views/adminhomepage.ejs
+++ b/views/adminhomepage.ejs
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-inverse">  
     <div class="navbar-header">
       <a class="navbar-brand active" href="adminattendee">Attendee</a>
-      <a class="navbar-brand active" href="presenter">presenter</a>   
+      <a class="navbar-brand active" href="adminpresenter">presenter</a>   
       <a class="navbar-brand active" href="adminvendor">vendor</a>
     </div>
       <li class="pull-right">
