--- a/views/adminvendor.ejs
+++ b/views/adminvendor.ejs
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="/css/home.css" rel="stylesheet" type="text/css"/>
 </head>
-<body>
-    <form method="post" action="/index/adminhomepage">
+    <!-- <form method="post" action="/index/adminhomepage">
   <div class="container-fluid">
         <div class="header clearfix">
         <nav class="navbar navbar-inverse">  
@@ -23,9 +22,9 @@
        </li>
       </nav>  
         </div>
-  </div>
+  </div> -->
   
-    <!-- <body>
+    <body>
      <h2> Vendor</h2>
      <br>
      <br>
@@ -58,4 +57,4 @@
   </table>
   <div>
     </div> 
-</div> -->
+</div>
